--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-    "token": "discord token",
-    "ServerID": "GUILD",
-    "Vanity": ".gg/whatever",
-    "PrioRole": "ID ROLE"
+    "token": "",
+    "ServerID": "",
+    "Vanity": "",
+    "PrioRole": ""
+
 }
